Add nova theme for tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,3 +19,11 @@ bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
 
+# tmux plugin manager and theme
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'o0th/tmux-nova'
+
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
