--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,4 +1,5 @@
-set -g default-terminal "xterm-256color"
+set -g default-terminal "tmux-256color"
+set-option -sa terminal-overrides ',xterm-256color:RGB'
 set -g mouse on
 
 # remap prefix from 'C-b' to 'C-a'
