--- a/alacritty/.alacritty.yml
+++ b/alacritty/.alacritty.yml
@@ -14,7 +14,8 @@
 # Any items in the `env` entry below will be added as
 # environment variables. Some entries may override variables
 # set by alacritty itself.
-#env:
+env:
+  WINIT_X11_SCALE_FACTOR: '1.0'
   # TERM variable
   #
   # This value is used to set the `$TERM` environment variable for
@@ -22,6 +23,7 @@
   # check the local terminfo database and use `alacritty` if it is
   # available, otherwise `xterm-256color` is used.
   #TERM: alacritty
+
 
 window:
   # Window dimensions (changes require restart)
