--- a/alacritty/.alacritty.yml
+++ b/alacritty/.alacritty.yml
@@ -419,10 +419,10 @@ font:
 
 shell:
   program: /bin/zsh
-  args:
-    - -l
-    - -c
-    - "tmux attach || tmux"
+  # args:
+  #   - -l
+  #   - -c
+  #   - "tmux attach || tmux"
 
 # Startup directory
 #
