--- a/picom/.config/picom.conf
+++ b/picom/.config/picom.conf
@@ -216,8 +216,8 @@ blur-background-exclude = [
 backend = "xrender";
 
 # Enable/disable VSync.
-# vsync = false
-vsync = true;
+vsync = false
+# vsync = true;
 
 # Enable remote control via D-Bus. See the *D-BUS API* section below for more details.
 # dbus = false
@@ -368,7 +368,7 @@ use-damage = true;
 # using *--log-file*, since it can generate a huge stream of logs.
 #
 # log-level = "debug"
-log-level = "warn";
+log-level = "error";
 
 # Set the log file.
 # If *--log-file* is never specified, logs will be written to stderr.
