Change tmux theme
(cherry picked from commit 5bcc033a2725b91d5463074de6014e328ce97bbe)

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -26,7 +26,10 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 
 # Theme
 set -g @plugin 'wfxr/tmux-power'
-set -g @tmux_power_theme 'forest'
+# Forest theme
+# set -g @tmux_power_theme 'forest'
+# Sky theme
+set -g @tmux_power_theme 'sky'
 
 
 
