--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -34,7 +34,7 @@ input {
     kb_options =
     kb_rules =
 
-    follow_mouse = 1
+    follow_mouse = 0
 
     touchpad {
         natural_scroll = false
@@ -133,7 +133,7 @@ $mainMod = SUPER
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod SHIFT, C, killactive,
-bind = $mainMod, M, exit,
+bind = $mainMod SHIFT, Q, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod CTRL, SPACE, togglefloating,
 bind = $mainMod, R, exec, $menu
@@ -145,6 +145,11 @@ bind = $mainMod, H, movefocus, l
 bind = $mainMod, L, movefocus, r
 bind = $mainMod, K, movefocus, u
 bind = $mainMod, J, movefocus, d
+
+# Toggle fullscreen
+bind = $mainMod, M, fullscreen
+# Fake (internal) fullscreen
+bind = $mainMod SHIFT, M, fakefullscreen
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -175,8 +180,8 @@ bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, LEFT, workspace, e+1
-bind = $mainMod, RIGHT, workspace, e-1
+bind = $mainMod, RIGHT, workspace, e+1
+bind = $mainMod, LEFT, workspace, e-1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
@@ -184,3 +189,12 @@ bindm = $mainMod, mouse:273, resizewindow
 
 # Open up browser
 bind = $mainMod, B, exec, $browser
+
+# Screenshots with grim, slurp and swappy
+bind = $mainMod SHIFT, S, exec, grim -g "$(slurp)" - | swappy -f -
+
+# Cycle between windows
+bind = ALT, TAB, cyclenext
+bind = ALT, TAB, bringactivetotop
+bind = ALT SHIFT, TAB, cyclenext, prev
+bind = ALT SHIFT, TAB, bringactivetotop
