--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -15,7 +15,7 @@ exec-once = dunst & waybar & /usr/lib/polkit-kde-authentication-agent-1
 $terminal = alacritty
 $fileManager = thunar
 $browser = firefox
-$menu = dmenu_run
+$menu = wofi --show drun
 # Some default env vars.
 env = XCURSOR_SIZE,24
 
@@ -26,17 +26,20 @@ env = GBM_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = WLR_NO_HARDWARE_CURSORS,1
 
+# Set GTK Themes
+env = GTK_THEME,Breeze:dark
+
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = us
-    kb_variant =
+    kb_variant = 
     kb_model =
     kb_options =
     kb_rules =
 
-    follow_mouse = 0
+    follow_mouse = 0 
 
-    touchpad {
+    touchpad { 
         natural_scroll = false
     }
 
@@ -176,8 +179,8 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+# bind = $mainMod, S, togglespecialworkspace, magic
+# bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, RIGHT, workspace, e+1
