--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -1,4 +1,9 @@
-# See https://wiki.hyprland.org/Configuring/Monitors/
+
+# Monitor setup
+# Laptop (internal) display on left
+# External (HDMI) monitor on right at 144Hz
+monitor=eDP-2, 1920x1080@165, 0x0, 1
+monitor=HDMI-A-1, 1920x1080@144, 1920x0, 1
 monitor=,preferred,auto,auto
 
 
