Only have 1 workspace on laptop display, and all others on external

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -135,6 +135,19 @@ device:epic-mouse-v1 {
 windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
 
 
+# Workspace rules
+workspace=1, monitor:eDP-2, persistent:true
+workspace=2, monitor:HDMI-A-1, persistent:true
+workspace=3, monitor:HDMI-A-1, persistent:true
+workspace=4, monitor:HDMI-A-1, persistent:true
+workspace=5, monitor:HDMI-A-1, persistent:true
+workspace=6, monitor:HDMI-A-1, persistent:true
+workspace=7, monitor:HDMI-A-1, persistent:true
+workspace=8, monitor:HDMI-A-1, persistent:true
+workspace=9, monitor:HDMI-A-1, persistent:true
+workspace=10, monitor:HDMI-A-1, persistent:true
+
+
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
