Styled waybar, got mediakeys working (Hyprland improvements)

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -12,6 +12,7 @@ monitor=,preferred,auto,auto
 # Execute your favorite apps at launch
 # exec-once = waybar & hyprpaper & firefox
 exec-once = dunst & waybar & /usr/lib/polkit-kde-authentication-agent-1
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -134,6 +135,11 @@ device:epic-mouse-v1 {
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
 
+# Make xwaylandvideobridge work - for screensharing wayland apps to x11 apps
+windowrulev2 = opacity 0.0 override 0.0 override,class:^(xwaylandvideobridge)$
+windowrulev2 = noanim,class:^(xwaylandvideobridge)$
+windowrulev2 = nofocus,class:^(xwaylandvideobridge)$
+windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
 
 # Workspace rules
 workspace=1, monitor:eDP-2, persistent:true
@@ -219,3 +225,15 @@ bind = ALT, TAB, cyclenext
 bind = ALT, TAB, bringactivetotop
 bind = ALT SHIFT, TAB, cyclenext, prev
 bind = ALT SHIFT, TAB, bringactivetotop
+
+# Media keys
+bind = , XF86AudioPlay, exec, ~/.scripts/playerctl-fast play-pause
+bind = , XF86AudioStop, exec, ~/.scripts/playerctl-fast play-pause
+bind = , XF86AudioPrev, exec, ~/.scripts/playerctl-fast previous
+bind = , XF86AudioNext, exec, ~/.scripts/playerctl-fast next
+
+
+# Things to execute on launch
+# exec-once = waybar & hyprpaper & firefox
+exec-once = dunst & waybar & /usr/lib/polkit-kde-authentication-agent-1
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
