Fixed xdg-desktop-portal-hyprland issue

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -230,4 +230,5 @@ bind = , XF86AudioNext, exec, ~/.scripts/playerctl-fast next
 # Things to execute on launch
 # exec-once = waybar & hyprpaper & firefox
 exec-once = dunst & waybar & /usr/lib/polkit-kde-authentication-agent-1
-exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+# exec-once = ~/.scripts/start-xdg-desktop-portal-hyprland
+# exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
