--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -25,6 +25,7 @@ env = XDG_SESSION_TYPE,wayland
 env = GBM_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = WLR_NO_HARDWARE_CURSORS,1
+env = GDK_BACKEND,wayland
 
 # Set GTK Themes
 env = GTK_THEME,Breeze:dark
@@ -232,3 +233,8 @@ bind = , XF86AudioNext, exec, ~/.scripts/playerctl-fast next
 exec-once = dunst & waybar & /usr/lib/polkit-kde-authentication-agent-1
 # exec-once = ~/.scripts/start-xdg-desktop-portal-hyprland
 # exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+#
+
+# hyprpaper for wallpaper stuff
+# exec-once = hyprpaper & ~/.config/hypr/setwallpapers
+exec-once = hyprpaper
