--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -132,27 +132,16 @@ windowrulev2 = nofocus,class:^(xwaylandvideobridge)$
 windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
 
 # Workspace rules
-workspace=1, monitor:eDP-1, persistent:true
-workspace=1, monitor:eDP-2, persistent:true
-workspace=2, monitor:HDMI-A-1, persistent:true
-workspace=2, monitor:HDMI-A-2, persistent:true
-workspace=3, monitor:HDMI-A-1, persistent:true
-workspace=3, monitor:HDMI-A-2, persistent:true
-workspace=4, monitor:HDMI-A-1, persistent:true
-workspace=4, monitor:HDMI-A-2, persistent:true
-workspace=5, monitor:HDMI-A-1, persistent:true
-workspace=5, monitor:HDMI-A-2, persistent:true
-workspace=6, monitor:HDMI-A-1, persistent:true
-workspace=6, monitor:HDMI-A-2, persistent:true
-workspace=7, monitor:HDMI-A-1, persistent:true
-workspace=7, monitor:HDMI-A-2, persistent:true
-workspace=8, monitor:HDMI-A-1, persistent:true
-workspace=8, monitor:HDMI-A-2, persistent:true
-workspace=9, monitor:HDMI-A-1, persistent:true
-workspace=9, monitor:HDMI-A-2, persistent:true
-workspace=10, monitor:HDMI-A-1, persistent:true
-workspace=10, monitor:HDMI-A-2, persistent:true
-
+workspace=1, monitor=left, persistent:true
+workspace=2, monitor=right, persistent:true
+workspace=3, monitor=right, persistent:true
+workspace=4, monitor=right, persistent:true
+workspace=5, monitor=right, persistent:true
+workspace=6, monitor=right, persistent:true
+workspace=7, monitor=right, persistent:true
+workspace=8, monitor=right, persistent:true
+workspace=9, monitor=right, persistent:true
+workspace=10, monitor=right, persistent:true
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
