Fixed hyprland not putting workspaces on the correct monitors

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -2,11 +2,11 @@
 # Monitor setup
 # Laptop (internal) display on left
 # External (HDMI) monitor on right at 144Hz
-monitor=eDP-1, 1920x1080@165, 0x0, 1
-monitor=eDP-2, 1920x1080@165, 0x0, 1
-monitor=HDMI-A-1, 1920x1080@144, 1920x0, 1
-monitor=HDMI-A-2, 1920x1080@144, 1920x0, 1
-monitor=,preferred,auto,auto
+monitor=eDP-1, 2560x1600@60, 0x0, 1
+monitor=eDP-2, 2560x1600@60, 0x0, 1
+monitor=HDMI-A-1, 1920x1080@144, 2560x0, 1
+monitor=HDMI-A-2, 1920x1080@144, 2560x0, 1
+monitor=,preferred,auto, 1
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
@@ -110,7 +110,7 @@ master {
 
 gestures {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    workspace_swipe = false
+    workspace_swipe = falseHDMI-A-1
 }
 
 misc {
@@ -127,20 +127,20 @@ misc {
 # Make xwaylandvideobridge work - for screensharing wayland apps to x11 apps
 windowrulev2 = opacity 0.0 override 0.0 override,class:^(xwaylandvideobridge)$
 windowrulev2 = noanim,class:^(xwaylandvideobridge)$
-windowrulev2 = nofocus,class:^(xwaylandvideobridge)$
+windowrulev2 = nofocus,class:^(xwaylandvideobridge)
 windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
 
 # Workspace rules
-workspace=1, monitor=left, persistent:true
-workspace=2, monitor=right, persistent:true
-workspace=3, monitor=right, persistent:true
-workspace=4, monitor=right, persistent:true
-workspace=5, monitor=right, persistent:true
-workspace=6, monitor=right, persistent:true
-workspace=7, monitor=right, persistent:true
-workspace=8, monitor=right, persistent:true
-workspace=9, monitor=right, persistent:true
-workspace=10, monitor=right, persistent:true
+workspace=1, monitor:eDP-1, default:true, persistent:true
+workspace=2, persistent:true
+workspace=3, persistent:true
+workspace=4, persistent:true
+workspace=5, persistent:true
+workspace=6, persistent:true
+workspace=7, persistent:true
+workspace=8, persistent:true
+workspace=9, persistent:true
+workspace=10, persistent:true
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
@@ -164,7 +164,7 @@ bind = $mainMod, J, movefocus, d
 # Toggle fullscreen
 bind = $mainMod, M, fullscreen
 # Fake (internal) fullscreen
-bind = $mainMod SHIFT, M, fakefullscreen
+# bind = $mainMod SHIFT, M, fakefullscreen
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
