--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -2,10 +2,10 @@
 # Monitor setup
 # Laptop (internal) display on left
 # External (HDMI) monitor on right at 144Hz
-monitor=eDP-1, 2560x1600@60, 0x0, 1
-monitor=eDP-2, 2560x1600@60, 0x0, 1
-monitor=HDMI-A-1, 1920x1080@144, 2560x0, 1
-monitor=HDMI-A-2, 1920x1080@144, 2560x0, 1
+monitor=eDP-1, 2560x1600@60, 0x0, 1.6
+monitor=eDP-2, 2560x1600@60, 0x0, 1.6
+monitor=HDMI-A-1, 1920x1080@144, auto, 1
+monitor=HDMI-A-2, 1920x1080@144, auto, 1
 monitor=,preferred,auto, 1
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
