Added maximise bind to hyprland

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -163,8 +163,8 @@ bind = $mainMod, J, movefocus, d
 
 # Toggle fullscreen
 bind = $mainMod, M, fullscreen
-# Fake (internal) fullscreen
-# bind = $mainMod SHIFT, M, fakefullscreen
+# Maximize
+bind = $mainMod SHIFT, M, fullscreen, 1
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
