Adjusted hyprland mouse sens, set flat mouse accel, enabled tearing, and lowered outer gaps size

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -46,14 +46,15 @@ input {
         natural_scroll = false
     }
 
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+    sensitivity = 0.5 # -1.0 - 1.0, 0 means no modification.
+    accel_profile = flat
 }
 
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     gaps_in = 5
-    gaps_out = 20
+    gaps_out = 5
     border_size = 2
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
@@ -61,7 +62,7 @@ general {
     layout = dwindle
 
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
-    allow_tearing = false
+    allow_tearing = true
 }
 
 decoration {
