Run blueman-applet on hyprland start

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -232,3 +232,6 @@ exec-once = dunst & waybar & /usr/lib/polkit-kde-authentication-agent-1
 # hyprpaper for wallpaper stuff
 # exec-once = hyprpaper & ~/.config/hypr/setwallpapers
 exec-once = hyprpaper
+
+# Bluetooth applet
+exec-once = blueman-applet
