--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -132,16 +132,16 @@ windowrulev2 = nofocus,class:^(xwaylandvideobridge)
 windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
 
 # Workspace rules
-workspace=1, monitor:eDP-1, default:true, persistent:true
-workspace=2, persistent:true
-workspace=3, persistent:true
-workspace=4, persistent:true
-workspace=5, persistent:true
-workspace=6, persistent:true
-workspace=7, persistent:true
-workspace=8, persistent:true
-workspace=9, persistent:true
-workspace=10, persistent:true
+workspace=1, default:true, persistent:true, monitor:eDP-2
+workspace=2, persistent:true, monitor:HDMI-A-1
+workspace=3, persistent:true, monitor:HDMI-A-1
+workspace=4, persistent:true, monitor:HDMI-A-1
+workspace=5, persistent:true, monitor:HDMI-A-1
+workspace=6, persistent:true, monitor:HDMI-A-1
+workspace=7, persistent:true, monitor:HDMI-A-1
+workspace=8, persistent:true, monitor:HDMI-A-1
+workspace=9, persistent:true, monitor:HDMI-A-1
+workspace=10, persistent:true, monitor:HDMI-A-1
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
