Update hyprland and hyprpaper config

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -110,10 +110,10 @@ master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
 }
 
-gestures {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    workspace_swipe = false
-}
+# gestures {
+#     # See https://wiki.hyprland.org/Configuring/Variables/ for more
+#     workspace_swipe = false
+# }
 
 misc {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
@@ -127,10 +127,10 @@ misc {
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
 # Make xwaylandvideobridge work - for screensharing wayland apps to x11 apps
-windowrulev2 = opacity 0.0 override 0.0 override,class:^(xwaylandvideobridge)$
-windowrulev2 = noanim,class:^(xwaylandvideobridge)$
-windowrulev2 = nofocus,class:^(xwaylandvideobridge)
-windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
+# windowrule = opacity 0.0 override 0.0 override,^(xwaylandvideobridge)$
+# windowrule = noanim,^(xwaylandvideobridge)$
+# windowrule = nofocus,^(xwaylandvideobridge)
+# windowrule = noinitialfocus,^(xwaylandvideobridge)$
 
 # Workspace rules
 workspace=1, default:true, persistent:true, monitor:eDP-2
