--- a/hyprland/.config/hypr/hyprpaper.conf
+++ b/hyprland/.config/hypr/hyprpaper.conf
@@ -1,10 +1,5 @@
-preload = ~/.wallpapers/anime1.jpg
-
-#set the default wallpaper(s) seen on initial workspace(s) --depending on the number of monitors used
-wallpaper = ,~/.wallpapers/anime1.jpg
-
-#enable splash text rendering over the wallpaper
-splash = false
-
-#fully disable ipc
-# ipc = off
+wallpaper {
+    monitor = 
+    path = ~/.wallpapers/anime1.jpg
+    fit_mode = cover
+}
